--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,28 @@
+astroid==2.5.6
 beautifulsoup4==4.9.3
 certifi==2021.5.30
 chardet==4.0.0
 click==8.0.1
+dominate==2.6.0
 Flask==2.0.1
+Flask-Bootstrap==3.3.7.1
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.0
 idna==2.10
+isort==5.8.0
 itsdangerous==2.0.1
 Jinja2==3.0.1
+lazy-object-proxy==1.6.0
 lxml==4.6.3
 MarkupSafe==2.0.1
+mccabe==0.6.1
 psycopg2-binary==2.8.6
+pylint==2.8.3
 requests==2.25.1
 soupsieve==2.2.1
+SQLAlchemy==1.4.17
+toml==0.10.2
 urllib3==1.26.5
+visitor==0.1.3
 Werkzeug==2.0.1
+wrapt==1.12.1
