--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
+alembic==1.6.5
 astroid==2.5.6
 beautifulsoup4==4.9.3
+blinker==1.4
 certifi==2021.5.30
 chardet==4.0.0
 click==8.0.1
 dominate==2.6.0
 Flask==2.0.1
 Flask-Bootstrap==3.3.7.1
+Flask-Mail==0.9.1
+Flask-Migrate==3.0.1
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.0
 idna==2.10
@@ -14,11 +18,15 @@ itsdangerous==2.0.1
 Jinja2==3.0.1
 lazy-object-proxy==1.6.0
 lxml==4.6.3
+Mako==1.1.4
 MarkupSafe==2.0.1
 mccabe==0.6.1
 psycopg2-binary==2.8.6
 pylint==2.8.3
+python-dateutil==2.8.1
+python-editor==1.0.4
 requests==2.25.1
+six==1.16.0
 soupsieve==2.2.1
 SQLAlchemy==1.4.17
 toml==0.10.2
