Add hash password methods to User db

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ click==8.0.1
 dominate==2.6.0
 Flask==2.0.1
 Flask-Bootstrap==3.3.7.1
+Flask-Login==0.5.0
 Flask-Mail==0.9.1
 Flask-Migrate==3.0.1
 Flask-SQLAlchemy==2.5.1
