--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ Flask-Login==0.5.0
 Flask-Mail==0.9.1
 Flask-Migrate==3.0.1
 Flask-SQLAlchemy==2.5.1
+Flask-WTF==0.15.1
 greenlet==1.1.0
 idna==2.10
 isort==5.8.0
@@ -35,3 +36,4 @@ urllib3==1.26.5
 visitor==0.1.3
 Werkzeug==2.0.1
 wrapt==1.12.1
+WTForms==2.3.3
