--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ blinker==1.4
 certifi==2021.5.30
 chardet==4.0.0
 click==8.0.1
+dnspython==2.1.0
 dominate==2.6.0
+email-validator==1.1.3
 Flask==2.0.1
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.5.0
