--- a/requirements.txt
+++ b/requirements.txt
@@ -10,12 +10,14 @@ click==8.0.1
 cryptography==3.4.7
 dnspython==2.1.0
 dominate==2.6.0
+elasticsearch==7.13.3
 email-validator==1.1.3
 Flask==2.0.1
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
 Flask-Migrate==3.0.1
+Flask-Modals==0.3.1
 Flask-SQLAlchemy==2.5.1
 Flask-User==1.0.2.2
 Flask-WTF==0.15.1
