--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 alembic==1.6.5
+astor==0.8.1
 astroid==2.5.6
+attrs==21.2.0
+bandit==1.7.0
 bcrypt==3.2.0
 beautifulsoup4==4.9.3
 blinker==1.4
@@ -8,10 +11,27 @@ cffi==1.14.5
 chardet==4.0.0
 click==8.0.1
 cryptography==3.4.7
+darglint==1.8.0
 dnspython==2.1.0
+docutils==0.17.1
 dominate==2.6.0
 elasticsearch==7.13.3
 email-validator==1.1.3
+eradicate==2.0.0
+flake8==3.9.2
+flake8-bandit==2.1.2
+flake8-broken-line==0.3.0
+flake8-bugbear==21.4.3
+flake8-commas==2.0.0
+flake8-comprehensions==3.5.0
+flake8-debugger==4.0.0
+flake8-docstrings==1.6.0
+flake8-eradicate==1.1.0
+flake8-isort==4.0.0
+flake8-polyfill==1.0.2
+flake8-quotes==3.2.0
+flake8-rst-docstrings==0.2.3
+flake8-string-format==0.3.0
 Flask==2.0.1
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.5.0
@@ -21,6 +41,8 @@ Flask-Modals==0.3.1
 Flask-SQLAlchemy==2.5.1
 Flask-User==1.0.2.2
 Flask-WTF==0.15.1
+gitdb==4.0.7
+GitPython==3.1.18
 greenlet==1.1.0
 idna==2.10
 isort==5.8.0
@@ -32,18 +54,32 @@ Mako==1.1.4
 MarkupSafe==2.0.1
 mccabe==0.6.1
 passlib==1.7.4
+pbr==5.6.0
+pep8-naming==0.11.1
 psycopg2-binary==2.8.6
+pycodestyle==2.7.0
 pycparser==2.20
+pydocstyle==6.1.1
+pyflakes==2.3.1
+Pygments==2.9.0
 pylint==2.8.3
 python-dateutil==2.8.1
 python-editor==1.0.4
+PyYAML==5.4.1
 requests==2.25.1
+restructuredtext-lint==1.3.2
 six==1.16.0
+smmap==4.0.0
+snowballstemmer==2.1.0
 soupsieve==2.2.1
 SQLAlchemy==1.4.17
+stevedore==3.3.0
+testfixtures==6.18.0
 toml==0.10.2
+typing-extensions==3.10.0.0
 urllib3==1.26.5
 visitor==0.1.3
+wemake-python-styleguide==0.15.3
 Werkzeug==2.0.1
 wrapt==1.12.1
 WTForms==2.3.3
