--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
 [flake8]
 ignore = I001, # isort found an import in the wrong position
          I005, # isort found an unexpected missing import
+         W503, # line break before binary operator
          WPS432, # Found magic number: 64
          WPS305, # Found `f` string
          WPS237 # Found a too complex `f` string
