--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ certifi==2021.5.30
 cffi==1.14.5
 chardet==4.0.0
 click==8.0.1
+coverage==5.5
 cryptography==3.4.7
 darglint==1.8.0
 dnspython==2.1.0
@@ -45,6 +46,7 @@ gitdb==4.0.7
 GitPython==3.1.18
 greenlet==1.1.0
 idna==2.10
+iniconfig==1.1.1
 isort==5.8.0
 itsdangerous==2.0.1
 Jinja2==3.0.1
@@ -53,21 +55,28 @@ lxml==4.6.3
 Mako==1.1.4
 MarkupSafe==2.0.1
 mccabe==0.6.1
+packaging==21.0
 passlib==1.7.4
 pbr==5.6.0
 pep8-naming==0.11.1
+pluggy==0.13.1
 psycopg2-binary==2.8.6
+py==1.10.0
 pycodestyle==2.7.0
 pycparser==2.20
 pydocstyle==6.1.1
 pyflakes==2.3.1
 Pygments==2.9.0
 pylint==2.8.3
+pyparsing==2.4.7
+pytest==6.2.4
+pytest-cov==2.12.1
 python-dateutil==2.8.1
 python-editor==1.0.4
 PyYAML==5.4.1
 requests==2.25.1
 restructuredtext-lint==1.3.2
+rope==0.19.0
 six==1.16.0
 smmap==4.0.0
 snowballstemmer==2.1.0
