--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -24,11 +24,24 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+
+    - name: Import GPG key
+      id: import_gpg
+      uses: crazy-max/ghaction-import-gpg@v3
+      with:
+        gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         python -m pip install pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
+    - name: Secret reveal
+      run: |
+        sudo apt install git-secret
+        git secret reveal
+
     - name: Test with pytest
       run: |
         pytest
